# HPC_LEAD

./: README.md
lead_pdc_project/: 100.txt  1000.txt  10000.txt  10100.txt  10200.txt  10300.txt  10400.txt  10500.txt  10600.txt  10700.txt  10800.txt  10900.txt  1100.txt  11000.txt  11100.txt  11200.txt  11300.txt  11400.txt  11500.txt  11600.txt  11700.txt  11800.txt  11900.txt  1200.txt  12000.txt  12100.txt  12200.txt  12300.txt  12400.txt  12500.txt  12600.txt  12700.txt  12800.txt  12900.txt  1300.txt  13000.txt  13100.txt  13200.txt  13300.txt  13400.txt  (+1448 more)
lead_pdc_project/compareFiles/: Makefile  compare.cpp  compare.slurm  test_file.txt
tarea2/: CMakeLists.txt  io.h  main.cpp  matrizA_100.txt  matrizA_1000.txt  matrizB_100.txt  matrizB_1000.txt  strassen  strassen.cpp  strassen.slurm  strassen_parallel  strassen_serial  test1  test2  test3  test4  test_strassen_0.txt  test_strassen_A.txt
tarea3/: CMakeLists.txt  Makefile  io.h  shear  shear.cpp  shear.slurm  test_shear_1.txt  timer.h
tarea_4_parsum_heat2d/heat2d/: CMakeLists.txt  Makefile  heat2d  heat2d.c  result.txt  submit.slurm
tarea_4_parsum_heat2d/parsum/: CMakeLists.txt  Makefile  parsum  parsum.c  submit.slurm
